--- a/package.json
+++ b/package.json
@@ -33,10 +33,8 @@
   "author": "salmon",
   "module": "dist/neo4j-practice.esm.js",
   "devDependencies": {
-    "eslint-config-oclif": "^3.1.0",
-    "eslint-config-oclif-typescript": "^0.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "@pentium/eslint-config-pnetwork": "^1.0.0",
+    "eslint": "^7.6.0",
     "husky": "^4.2.5",
     "tsdx": "^0.13.2",
     "tslib": "^2.0.0",
